src/base/objects/Asset/fields/BD_Owner__c.field-meta.xml
<CustomField>
    <fullName>BD_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>