src/base/objects/Asset/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>Bill__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>