src/base/objects/Asset/fields/BT_Product__c.field-meta.xml
<CustomField>
    <fullName>BT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This asset&apos;s opportunity node.</description>
    <label>BT Product</label>
    <referenceTo>BT_Product__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>