src/base/objects/Asset/fields/Churned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churned_Reason__c</fullName>
    <inlineHelpText>If the asset has churned please specify why.</inlineHelpText>
    <label>Churned Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BT Decision</fullName>
            </value>
            <value>
                <fullName>BT service</fullName>
                <isActive>false</isActive>
                <label>BT service</label>
            </value>
            <value>
                <fullName>BT Service Related - Missing Functionality / Product</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Other</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Price Sensitivity / Competition</fullName>
            </value>
            <value>
                <fullName>Issues with Protocol</fullName>
                <isActive>false</isActive>
                <label>Issues with Protocol</label>
            </value>
            <value>
                <fullName>Liquidating/Selling tokens</fullName>
                <isActive>false</isActive>
                <label>Liquidating/Selling tokens</label>
            </value>
            <value>
                <fullName>Non-BT Service Related - Asset Liquidation</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Other</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Protocol Issues</fullName>
            </value>
            <value>
                <fullName>Personal (non-BT service)</fullName>
                <isActive>false</isActive>
                <label>Personal (non-BT service)</label>
            </value>
            <value>
                <fullName>Platform/Service Issues</fullName>
                <isActive>false</isActive>
                <label>Platform/Service Issues</label>
            </value>
            <value>
                <fullName>Protocol issues</fullName>
                <isActive>false</isActive>
                <label>Protocol issues</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>