src/base/objects/Asset/fields/Growth_Type__c.field-meta.xml
<CustomField>
    <fullName>Growth_Type__c</fullName>
    <description>This field shows if the asset was spun up as part of initial onboarding or as post-onboarding expansion</description>
    <formula>TEXT(BT_Product__r.Opportunity__r.Type)</formula>
    <label>Growth Type</label>
    <type>Text</type>
</CustomField>