src/base/objects/Asset/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>The type of product for this asset.</description>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delegation</fullName>
            </value>
            <value>
                <fullName>Participation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Coinbase Pay SDK</fullName>
            </value>
            <value>
                <fullName>Wallet-as-a-Service</fullName>
            </value>
            <value>
                <fullName>QT</fullName>
                <isActive>false</isActive>
                <label>QT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>