src/base/objects/Asset/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>The protocol associated with this asset.</description>
    <label>Protocol</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protocol_List</valueSetName>
    </valueSet>
</CustomField>