src/base/objects/Asset/fields/Total_Entities__c.field-meta.xml
<CustomField>
    <fullName>Total_Entities__c</fullName>
    <label>Total Entities</label>
    <summaryForeignKey>Asset_Entity_Relationship__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>