src/base/objects/Asset/listViews/Churned_Assets.listView-meta.xml
<ListView>
    <fullName>Churned_Assets</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>CONTACT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Churned</value>
    </filters>
    <label>Churned Assets</label>
</ListView>